增加随机颜色

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -4,5 +4,6 @@
         <attr name="srcBitmap" format="reference" />
         <attr name="colorBitmap" format="color" />
         <attr name="colorBitmapWidth" format="reference|dimension" />
+        <attr name="openRandomColor" format="boolean" />
     </declare-styleable>
 </resources>
